--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                             <li><a href="/SIGMA2018/Committees/">Committees</a></li>
                             <li><a href="/SIGMA2018/KeyNoteSpeakers/">Keynote Speakers</a></li>
                             <li><a href="/SIGMA2018/AcceptedSpeakers/">Accepted Papers</a></li>
-                            <li><a href="/Registration/">Registration</a></li>
+                            <li><a href="/Registration/Registration.html">Registration</a></li>
                             <li><a href="/SIGMA2018/Awards/">Awards<sup style="color:orange;">&nbsp;New</sup></a></li>
                             <li><a href="/SIGMA2018/Sponsorship_Info/">Sponsorship Info</a></li>
                             <li><a href="/SIGMA2018/Program/">Program<sup style="color:orange;">&nbsp;New</sup></a></li>
