Added call_for_papers & updated_index&Regis

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                 <div class="col-md-3 col-sm-12">
                     <div class="sidebar_nav">
                         <ul class="nav nav-list">
-                            <li><a href="/SIGMA2018/home/">Home</a></li>
-                            <li><a href="/SIGMA2018/CallforPapers/">Call for Papers</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="call_for_papers.html">Call for Papers</a></li>
                             <li><a href="/SIGMA2018/Publications/">Publication</a></li>
                             <li><a href="/SIGMA2018/Submission/">Submission</a></li>
                             <li><a href="/SIGMA2018/ImportantDates/">Important Dates</a></li>
