--- a/registration.html
+++ b/registration.html
@@ -124,15 +124,15 @@
                 <div class="col-md-3 col-sm-12">
                     <div class="sidebar_nav">
                         <ul class="nav nav-list">
-                            <li><a href="/SIGMA2018/home/">Home</a></li>
-                            <li><a href="/SIGMA2018/CallforPapers/">Call for Papers</a></li>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="call_for_papers.html">Call for Papers</a></li>
                             <li><a href="/SIGMA2018/Publications/">Publication</a></li>
                             <li><a href="/SIGMA2018/Submission/">Submission</a></li>
                             <li><a href="/SIGMA2018/ImportantDates/">Important Dates</a></li>
                             <li><a href="/SIGMA2018/Committees/">Committees</a></li>
                             <li><a href="/SIGMA2018/KeyNoteSpeakers/">Keynote Speakers</a></li>
                             <li><a href="/SIGMA2018/AcceptedSpeakers/">Accepted Papers</a></li>
-                            <li><a href="/SIGMA2018/Registration/">Registration</a></li>
+                            <li><a href="registration.html">Registration</a></li>
                             <li><a href="/SIGMA2018/Awards/">Awards<sup style="color:orange;">&nbsp;New</sup></a></li>
                             <li><a href="/SIGMA2018/Sponsorship_Info/">Sponsorship Info</a></li>
                             <li><a href="/SIGMA2018/Program/">Program<sup style="color:orange;">&nbsp;New</sup></a></li>
