Updated all the pages

--- a/submissions.html
+++ b/submissions.html
@@ -103,7 +103,7 @@
                         <font color="#800000" size="6"><b>MECHANICAL ENGINEERING</b></font>
                     </h3>
                     <h3 id="logo-subhead" style="text-align: center;">
-                        <font color="#800000"><b>(INCOME_2020)</b></font>
+                        <font color="#800000"><b>(INCOME 2020)</b></font>
                     </h3>
                     <h4 id="logo-subhead" style="text-align: center;">
                         <font color="white">15-17 December, at Netaji Subash University of Technology (NSUT) Delhi
