--- a/submissions.html
+++ b/submissions.html
@@ -126,31 +126,31 @@
                             <li style="width: 242px; height: 37px;"><a href="index.html">Home</a></li>
                             <li style="width: 242px; height: 37px;"><a href="call_for_papers.html">Call for
                                     Papers</a></li>
-                            <li style="width: 242px; height: 37px;"><a href="/SIGMA2018/Publications/">Publication</a>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Publication</a>
                             </li>
                             <li style="width: 242px; height: 37px;"><a href="submissions.html">Submission</a></li>
-                            <li style="width: 242px; height: 37px;"><a href="/SIGMA2018/ImportantDates/">Important
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Important
                                     Dates</a></li>
-                            <li style="width: 242px; height: 37px;"><a href="/SIGMA2018/Committees/">Committees</a></li>
-                            <li style="width: 242px; height: 37px;"><a href="/SIGMA2018/KeyNoteSpeakers/">Keynote
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Committees</a></li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Keynote
                                     Speakers</a></li>
-                            <li style="width: 242px; height: 37px;"><a href="/SIGMA2018/AcceptedSpeakers/">Accepted
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Accepted
                                     Papers</a></li>
                             <li style="width: 242px; height: 37px;"><a href="registration.html">Registration</a>
                             </li>
-                            <li style="width: 242px; height: 37px;"><a href="/SIGMA2018/Awards/">Awards<sup
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Awards<sup
                                         style="color:orange;">&nbsp;New</sup></a></li>
-                            <li style="width: 242px; height: 37px;"><a href="/SIGMA2018/Sponsorship_Info/">Sponsorship
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Sponsorship
                                     Info</a></li>
-                            <li style="width: 242px; height: 37px;"><a href="/SIGMA2018/Program/">Program<sup
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Program<sup
                                         style="color:orange;">&nbsp;New</sup></a></li>
-                            <li style="width: 242px; height: 37px;"><a href="/SIGMA2018/SpecialSession/">Special Session
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Special Session
                                     Details</a></li>
-                            <li style="width: 242px; height: 37px;"><a href="/SIGMA2018/download/">Download</a></li>
-                            <li style="width: 242px; height: 37px;"><a href="/SIGMA2018/Venue/">Venue</a></li>
-                            <li style="width: 242px; height: 37px;"><a href="/SIGMA2018/HotelTravelVisa/">Hotel,Travel
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Download</a></li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Venue</a></li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Hotel,Travel
                                     and Visa</a></li>
-                            <li style="width: 242px; height: 37px;"><a href="/SIGMA2018/ContactUs/">Contact Us</a></li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Contact Us</a></li>
                         </ul>
                     </div>
                     <br>
