--- a/registration.html
+++ b/registration.html
@@ -124,23 +124,34 @@
                 <div class="col-md-3 col-sm-12">
                     <div class="sidebar_nav">
                         <ul class="nav nav-list">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="call_for_papers.html">Call for Papers</a></li>
-                            <li><a href="/SIGMA2018/Publications/">Publication</a></li>
-                            <li><a href="/SIGMA2018/Submission/">Submission</a></li>
-                            <li><a href="/SIGMA2018/ImportantDates/">Important Dates</a></li>
-                            <li><a href="/SIGMA2018/Committees/">Committees</a></li>
-                            <li><a href="/SIGMA2018/KeyNoteSpeakers/">Keynote Speakers</a></li>
-                            <li><a href="/SIGMA2018/AcceptedSpeakers/">Accepted Papers</a></li>
-                            <li><a href="registration.html">Registration</a></li>
-                            <li><a href="/SIGMA2018/Awards/">Awards<sup style="color:orange;">&nbsp;New</sup></a></li>
-                            <li><a href="/SIGMA2018/Sponsorship_Info/">Sponsorship Info</a></li>
-                            <li><a href="/SIGMA2018/Program/">Program<sup style="color:orange;">&nbsp;New</sup></a></li>
-                            <li><a href="/SIGMA2018/SpecialSession/">Special Session Details</a></li>
-                            <li><a href="/SIGMA2018/download/">Download</a></li>
-                            <li><a href="/SIGMA2018/Venue/">Venue</a></li>
-                            <li><a href="/SIGMA2018/HotelTravelVisa/">Hotel,Travel and Visa</a></li>
-                            <li><a href="/SIGMA2018/ContactUs/">Contact Us</a></li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Home</a></li>
+                            <li style="width: 242px; height: 37px;"><a href="call_for_papers.html">Call for
+                                    Papers</a></li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Publication</a>
+                            </li>
+                            <li style="width: 242px; height: 37px;"><a href="submissions.html">Submission</a></li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Important
+                                    Dates</a></li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Committees</a></li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Keynote
+                                    Speakers</a></li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Accepted
+                                    Papers</a></li>
+                            <li style="width: 242px; height: 37px;"><a href="registration.html">Registration</a>
+                            </li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Awards<sup
+                                        style="color:orange;">&nbsp;New</sup></a></li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Sponsorship
+                                    Info</a></li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Program<sup
+                                        style="color:orange;">&nbsp;New</sup></a></li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Special Session
+                                    Details</a></li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Download</a></li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Venue</a></li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Hotel,Travel
+                                    and Visa</a></li>
+                            <li style="width: 242px; height: 37px;"><a href="index.html">Contact Us</a></li>
                         </ul>
                     </div>
                     <br>
