--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <head>
 
     <title>
-        NSIT | SIGMA 2018
+        NSIT | INCOME 2020
     </title>
     <meta property="og:title" content="About | NSIT" />
     <meta name="twitter:title" content="About | NSIT">
